[package]
name = "sha3-hash"
version = "0.1.3"
edition = "2018"
description = "Easy-to-use SHA-3 library with Serde support"
license = "CC0-1.0"
homepage = "https://github.com/printfn/sha3-hash"
repository = "https://github.com/printfn/sha3-hash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = { version = "0.9.1", default-features = false }
serde = { version = "1.0.126", default-features = false }

[dev-dependencies]
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
